# TicTacToe

./: CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp
TicTacToe_autogen/: deps  moc_predefs.h
TicTacToe_autogen/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d  moc_mainwindow.cpp.d
tests_autogen/: deps  moc_predefs.h
tests_autogen/EWIEGA46WW/: moc_dialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
tests_autogen/include/: ui_dialog.h  ui_mainwindow.h
